css/styles.css
/* Reset default styles */
* {
    font-family: Arial, sans-serif;
    margin: 0px auto;
    line-height: 1.8;
}

body {
    margin: 3rem;
}

/* Container styling for layout */
.container {
    margin: 2rem auto;
    font-family: Arial, sans-serif;
}

#vis svg {
    margin: 2rem 0;
    border: 1px solid #ccc;
    /*otherwise you can't see this part*/
}

#tooltip {
    position: absolute; /* So we can move it with the cursor */
    padding: 10px;
    background: white;
    border: 1px solid #ddd;
    border-radius: 4px;
    pointer-events: none; /* Prevent tooltip from interfering with mouse events */
    font-size: 12px;
}

#writeup {
    padding: 10px;
    margin-left: 1.5rem;
    max-width: 1000px; /* just a little wider than the svg above */
    /* border: 1px solid black; */ /* for debugging to see the border */
}

/* Styling axes with CSS */
.x-axis path,
.y-axis path,
.x-axis line,
.y-axis line {
    stroke: #333;
    shape-rendering: crispEdges;
}

.x-axis text,
.y-axis text {
    font-size: 12px;
    font-family: Arial, sans-serif;
}

.axis-label {
    font-size: 14px;
    font-weight: bold;
}

button {
    padding: 8px 16px;
    margin-right: 10px;
}

